demo/gatekeeper/Constraint_deploy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDPRequiredLabels
metadata:
  name: dp-must-have-label
spec:
  match:
    kinds:
      - apiGroups: ["apps/v1"]
        kinds: ["Deployment"]
  parameters:
    labels: ["apiserver"]
