demo/gatekeeper/template_calicocloud.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8scalicocloudpolicy
spec:
  crd:
    spec:
      names:
        kind: K8sCalicoCloudPolicy
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            dpname:
              type: string  

  targets:
     - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8scalicocloudpolicy

        violation[{"msg": msg, "details": {"missing_deployment": missing}}] {
          provided := input.review.object.metadata.name
          required := input.parameters.dpname
          missing := required - provided
          count(missing) > 0
          msg := sprintf("you don't have deployment %v ", [missing])
        }
